Bug 348340 - Progress halts when finished resizing images
Summary: Progress halts when finished resizing images
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-SendByMail (other bugs)
Version First Reported In: 5.6.0
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-27 23:36 UTC by Alexander Potashev
Modified: 2017-06-28 21:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2015-05-27 23:36:17 UTC
The KF5 version of sendimages does not work: it only resizes the images and then does nothing. SendImages::slotCompleteResize() is never called.

Reproducible: Always
Comment 1 Alexander Potashev 2015-05-28 03:10:57 UTC
Git commit 9b60203d8ca5e23d2efdf21a39ad6c52aeb558cd by Alexander Potashev.
Committed on 28/05/2015 at 03:57.
Pushed by aspotashev into branch 'frameworks'.

sendimages: Fix triggering of slotCompleteResize()

1. Task::run() now emits signalDone() to let class RActionThreadBase
track finished tasks.
2. ImageResize::slotFinished() is not called anymore, now we use signal
QThread::finished() to detect when all images have been resized.

M  +4    -5    sendimages/imageresize.cpp
M  +0    -5    sendimages/imageresize.h
M  +1    -1    sendimages/sendimages.cpp

http://commits.kde.org/kipi-plugins/9b60203d8ca5e23d2efdf21a39ad6c52aeb558cd