sendimages: Fix triggering of slotCompleteResize()

1. Task::run() now emits signalDone() to let class RActionThreadBase
track finished tasks.
2. ImageResize::slotFinished() is not called anymore, now we use signal
QThread::finished() to detect when all images have been resized.

BUG: 348340